--- a/notes/day-05/index.html
+++ b/notes/day-05/index.html
@@ -19,7 +19,7 @@
     <button id="all">All</button>
     <button id="pending">Pending</button>
     <button id="done">Done</button>
-    <button id="clear-all-todos">Clear all todos</button>
+    <button id="clear-all-todos">Clear all done</button>
 
     <ul id="todo-list"></ul>
 
